[package]
name = "dapp"
version = "4.0.0-beta"
authors = ["Chris Taylor chris@prosopo.io"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-alpha.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
prosopo = { git = "https://github.com/prosopo/protocol", branch = "inkv4", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "dapp"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib"
]

[features]
std = [
    "ink/std",
    "prosopo/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
