[package]
name = "dapp"
version = "4.0.0"
authors = ["Chris Taylor chris@prosopo.io"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", rev="ad4f5e579e39926704e182736af4fa945982ac2b", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
prosopo = { path = "../../protocol/contracts", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "dapp"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
std = [
    "ink/std",
    "prosopo/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
